2005-09-27  Andy Wingo  <wingo@pobox.com>

	* flumotion/worker/checks/video09.py (do_element_check): Update
	for api changes.

	* flumotion/component/producers/soundcard/soundcard.py
	(createComponent): Beginnings of 0.9 compat..

	* flumotion/component/producers/soundcard/soundcard.xml: Cleanups.

	* flumotion/component/feedcomponent09.py
	(FeedComponent.FEEDER_TMPL): tcpserversink sync=false, because the
	sources already sync to clocks.

	* flumotion/component/producers/audiotest/audiotest.py
	(createComponent): s/sync/is-live/.

2005-09-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/ui/fgtk.py:
	  further cleanup, get tick marks perfect

2005-09-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/soundcard/soundcard.xml:
	  bundle up soundcard component
	* flumotion/ui/fgtk.py:
	  remove a bunch of code by using a table and loop

2005-09-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/errors.py:
	* flumotion/wizard/steps.py:
	* flumotion/worker/checks/video08.py:
	* flumotion/worker/checks/video09.py:
	  have GStreamerError be a generic, string-taking error,
	  while GstError is an exception wrapper around gst.Error

2005-09-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/twisted/defer.py:
	* flumotion/worker/checks/video08.py:
	* flumotion/worker/checks/video09.py:
	  factor out a Resolution class and use it in the
	  checks

2005-09-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/errors.py:
	  add a state change gst error
	* flumotion/common/log.py:
	  log warnings that don't have a traceback

2005-09-22  Andy Wingo  <wingo@pobox.com>

	* tests/vorbis.py (buffer_probe): Use the right format, poll for
	the right thingy. Vorbis encoding works!

	* flumotion/component/encoders/vorbis/vorbis09.py
	(Vorbis.__init__.buffer_probe): Use the right format.

2005-09-21  Andy Wingo  <wingo@pobox.com>
