@@ -44,9 +44,9 @@ theora_DATA = \
 vorbisdir = $(componentdir)/vorbis
 vorbis_PYTHON = \
 	vorbis/__init__.py \
-	vorbis/vorbis.py
-	vorbis/vorbisutils.py
-	vorbis/vorbis08.py
+	vorbis/vorbis.py \
+	vorbis/vorbisutils.py \
+	vorbis/vorbis08.py \
 	vorbis/vorbis09.py
 vorbis_DATA = \
 	vorbis/vorbis.xml
