@@ -1,3 +1,11 @@
+2005-09-27  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/component/encoders/Makefile.am:
+	  fix disting
+	* po/nl.po:
+	* po/no.po:
+	  update line numbers
+
 2005-09-27  Andy Wingo  <wingo@pobox.com>
 
 	* flumotion/worker/checks/video09.py (do_element_check): Update
